--- a/UwingoIdentityMVC/Views/Authentication/Register.cshtml
+++ b/UwingoIdentityMVC/Views/Authentication/Register.cshtml
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>@Localizer["Uwingo - Identity"]</title>
+    <title>@Localizer["Uwingo-Identity"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
     <meta content="" name="author" />
@@ -39,14 +39,14 @@
                                     <a href="index.html" class="logo logo-admin">
                                         <img src="~/images/uwingoLogo.jpg" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="mt-3 mb-1 fw-semibold text-white font-18">@Localizer["Let's Get Started Uwingo"]</h4>
-                                    <p class="text-muted mb-0">@Localizer["Sign in to continue to Uwingo."]</p>
+                                    <h4 class="mt-3 mb-1 fw-semibold text-white font-18">@Localizer["Let'sGetStartedUwingo"]</h4>
+                                    <p class="text-muted mb-0">@Localizer["SignInToContinueToUwingo."]</p>
                                 </div>
                             </div>
                             <div class="card-body p-0">
                                 <ul class="nav-border nav nav-pills" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link fw-semibold" data-bs-toggle="tab" href="#LogIn_Tab" role="tab">@Localizer["Log In"]</a>
+                                        <a class="nav-link fw-semibold" data-bs-toggle="tab" href="#LogIn_Tab" role="tab">@Localizer["LogIn"]</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="#Register_Tab" role="tab">@Localizer["Register"]</a>
@@ -60,14 +60,14 @@
                                             <div class="form-group mb-2">
                                                 <label class="form-label" for="username">@Localizer["Username"]</label>
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control" name="username" id="username" placeholder="@Localizer["Enter username"]">
+                                                    <input type="text" class="form-control" name="username" id="username" placeholder="@Localizer["EnterUsername"]">
                                                 </div>
                                             </div><!--end form-group-->
 
                                             <div class="form-group mb-2">
                                                 <label class="form-label" for="userpassword">@Localizer["Password"]</label>
                                                 <div class="input-group">
-                                                    <input type="password" class="form-control" name="password" id="userpassword" placeholder="@Localizer["Enter password"]">
+                                                    <input type="password" class="form-control" name="password" id="userpassword" placeholder="@Localizer["EnterPassword"]">
                                                 </div>
                                             </div><!--end form-group-->
 
@@ -75,25 +75,25 @@
                                                 <div class="col-sm-6">
                                                     <div class="custom-control custom-switch switch-success">
                                                         <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
-                                                        <label class="form-label text-muted" for="customSwitchSuccess">@Localizer["Remember me"]</label>
+                                                        <label class="form-label text-muted" for="customSwitchSuccess">@Localizer["RememberMe"]</label>
                                                     </div>
                                                 </div><!--end col-->
                                                 <div class="col-sm-6 text-end">
-                                                    <a asp-action="ForgotPassword" class="text-muted font-13"><i class="dripicons-lock"></i> @Localizer["Forgot password?"]</a>
+                                                    <a asp-action="ForgotPassword" class="text-muted font-13"><i class="dripicons-lock"></i> @Localizer["ForgotPassword?"]</a>
                                                 </div><!--end col-->
                                             </div><!--end form-group-->
 
                                             <div class="form-group mb-0 row">
                                                 <div class="col-12">
-                                                    <button class="btn btn-primary w-100 waves-effect waves-light" type="button">@Localizer["Log In"] <i class="fas fa-sign-in-alt ms-1"></i></button>
+                                                    <button class="btn btn-primary w-100 waves-effect waves-light" type="button">@Localizer["LogIn"] <i class="fas fa-sign-in-alt ms-1"></i></button>
                                                 </div><!--end col-->
                                             </div> <!--end form-group-->
                                         </form><!--end form-->
                                         <div class="m-3 text-center text-muted">
-                                            <p class="mb-0">@Localizer["Don't have an account ?"] <a asp-action="Register" class="text-primary ms-2">@Localizer["Free Register"]</a></p>
+                                            <p class="mb-0">@Localizer["Don'tHaveAnAccount?"] <a asp-action="Register" class="text-primary ms-2">@Localizer["FreeRegister"]</a></p>
                                         </div>
                                         <div class="account-social">
-                                            <h6 class="mb-3">@Localizer["Or Login With"]</h6>
+                                            <h6 class="mb-3">@Localizer["OrLoginWith"]</h6>
                                         </div>
                                         <div class="btn-group w-100">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">@Localizer["Facebook"]</button>
@@ -107,53 +107,53 @@
                                             <div class="form-group mb-2">
                                                 <label class="form-label" for="username">@Localizer["Username"]</label>
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control" name="username" id="username" placeholder="@Localizer["Enter username"]">
+                                                    <input type="text" class="form-control" name="username" id="username" placeholder="@Localizer["EnterUsername"]">
                                                 </div>
                                             </div><!--end form-group-->
 
                                             <div class="form-group mb-2">
                                                 <label class="form-label" for="useremail">@Localizer["Email"]</label>
                                                 <div class="input-group">
-                                                    <input type="email" class="form-control" name="email" id="useremail" placeholder="@Localizer["Enter Email"]">
+                                                    <input type="email" class="form-control" name="email" id="useremail" placeholder="@Localizer["EnterEmail"]">
                                                 </div>
                                             </div><!--end form-group-->
 
                                             <div class="form-group mb-2">
                                                 <label class="form-label" for="userpassword">@Localizer["Password"]</label>
                                                 <div class="input-group">
-                                                    <input type="password" class="form-control" name="password" id="userpassword" placeholder="@Localizer["Enter password"]">
+                                                    <input type="password" class="form-control" name="password" id="userpassword" placeholder="@Localizer["EnterPassword"]">
                                                 </div>
                                             </div><!--end form-group-->
 
                                             <div class="form-group mb-2">
-                                                <label class="form-label" for="conf_password">@Localizer["Confirm Password"]</label>
+                                                <label class="form-label" for="conf_password">@Localizer["ConfirmPassword"]</label>
                                                 <div class="input-group">
-                                                    <input type="password" class="form-control" name="conf-password" id="conf_password" placeholder="@Localizer["Enter Confirm Password"]">
+                                                    <input type="password" class="form-control" name="conf-password" id="conf_password" placeholder="@Localizer["EnterConfirmPassword"]">
                                                 </div>
                                             </div><!--end form-group-->
 
                                             <div class="form-group mb-2">
-                                                <label class="form-label" for="mo_number">@Localizer["Mobile Number"]</label>
+                                                <label class="form-label" for="mo_number">@Localizer["MobileNumber"]</label>
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control" name="mobile number" id="mo_number" placeholder="@Localizer["Enter Mobile Number"]">
+                                                    <input type="text" class="form-control" name="mobile number" id="mo_number" placeholder="@Localizer["EnterMobileNumber"]">
                                                 </div>
                                             </div><!--end form-group-->
 
                                             <div class="form-floating mb-2">
                                                 <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-                                                    <option selected>@Localizer["Select Company Role"]</option>
+                                                    <option selected>@Localizer["SelectCompanyRole"]</option>
                                                     <option value="1">@Localizer["One"]</option>
                                                     <option value="2">@Localizer["Two"]</option>
                                                     <option value="3">@Localizer["Three"]</option>
                                                 </select>
-                                                <label for="floatingSelect">@Localizer["Works with selects"]</label>
+                                                <label for="floatingSelect">@Localizer["WorksWithSelects"]</label>
                                             </div>
 
                                             <div class="form-group row my-3">
                                                 <div class="col-sm-12">
                                                     <div class="custom-control custom-switch switch-success">
                                                         <input type="checkbox" class="custom-control-input" id="customSwitchSuccess2">
-                                                        <label class="form-label text-muted" for="customSwitchSuccess2">@Localizer["You agree to the Uwingo Terms of Use"]</label>
+                                                        <label class="form-label text-muted" for="customSwitchSuccess2">@Localizer["YouAgreeToTheUwingoTermsOfUse"]</label>
                                                     </div>
                                                 </div><!--end col-->
                                             </div><!--end form-group-->
@@ -164,9 +164,9 @@
                                                 </div><!--end col-->
                                             </div> <!--end form-group-->
                                         </form><!--end form-->
-                                        <p class="my-3 text-muted">@Localizer["Already have an account ?"]<a asp-action="Login" class="text-primary ms-2">@Localizer["Log In"]</a></p>
+                                        <p class="my-3 text-muted">@Localizer["AlreadyHaveAnAccount?"]<a asp-action="Login" class="text-primary ms-2">@Localizer["LogIn"]</a></p>
                                         <div class="account-social">
-                                            <h6 class="mb-3">@Localizer["Or Register With"]</h6>
+                                            <h6 class="mb-3">@Localizer["OrRegisterWith"]</h6>
                                         </div>
                                         <div class="btn-group w-100">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">@Localizer["Facebook"]</button>
