--- a/UwingoIdentityMVC/Views/Home/Index.cshtml
+++ b/UwingoIdentityMVC/Views/Home/Index.cshtml
@@ -32,9 +32,9 @@
                             <div class="card-body">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Şirketler"]</p>
+                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Companies"]</p>
                                         <h3 class="m-0">@Model.CompanyCount</h3>
-                                        <p class="mb-0 text-truncate text-muted">@Localizer["Toplam Şirket Sayısı"]</p>
+                                        <p class="mb-0 text-truncate text-muted">@Localizer["TotalCompanyCount"]</p>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
@@ -54,9 +54,9 @@
                             <div class="card-body">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Uygulamalar"]</p>
+                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Applications"]</p>
                                         <h3 class="m-0">@Model.ApplicationCount</h3>
-                                        <p class="mb-0 text-truncate text-muted">@Localizer["Toplam Uygulama Sayısı"]</p>
+                                        <p class="mb-0 text-truncate text-muted">@Localizer["TotalApplicationCount"]</p>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
@@ -76,9 +76,9 @@
                             <div class="card-body">
                                 <div class="row d-flex align-items-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Şirketlerin Uygulamaları"]</p>
+                                        <p class="text-dark mb-0 fw-semibold">@Localizer["ApplicationsOfCompanies"]</p>
                                         <h3 class="m-0">@Model.CompanyApplicationCount</h3>
-                                        <p class="mb-0 text-truncate text-muted">@Localizer["Şirketlerin Aldığı Toplam Uygulama Sayısı"]</p>
+                                        <p class="mb-0 text-truncate text-muted">@Localizer["TotalNumberOfApplicationsReceivedByCompanies"]</p>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
@@ -99,9 +99,9 @@
                             <div class="card-body">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Roller"]</p>
+                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Roles"]</p>
                                         <h3 class="m-0">@Model.RoleCount</h3>
-                                        <p class="mb-0 text-truncate text-muted">@Localizer["Toplam Rol Sayısı"]</p>
+                                        <p class="mb-0 text-truncate text-muted">@Localizer["TotalRoleCount"]</p>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
@@ -122,9 +122,9 @@
                             <div class="card-body">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Kiracılar"]</p>
+                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Tenants"]</p>
                                         <h3 class="m-0">@Model.TenantCount</h3>
-                                        <p class="mb-0 text-truncate text-muted">@Localizer["Toplam Kiracı Sayısı"]</p>
+                                        <p class="mb-0 text-truncate text-muted">@Localizer["TotalTenantCount"]</p>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
@@ -144,9 +144,9 @@
                             <div class="card-body">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col">
-                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Kullanıcılar"]</p>
+                                        <p class="text-dark mb-0 fw-semibold">@Localizer["Users"]</p>
                                         <h3 class="m-0">@Model.UserCount</h3>
-                                        <p class="mb-0 text-truncate text-muted">@Localizer["Toplam Kullanıcı Sayısı"]</p>
+                                        <p class="mb-0 text-truncate text-muted">@Localizer["TotalUserCount"]</p>
                                     </div>
                                     <div class="col-auto align-self-center">
                                         <div class="report-main-icon bg-light-alt">
