--- a/UwingoIdentityMVC/Views/Application/Create.cshtml
+++ b/UwingoIdentityMVC/Views/Application/Create.cshtml
@@ -1,16 +1,16 @@
 ﻿@model ApplicationDto
 
 @{
-    ViewBag.Title = @Localizer["Uygulama Oluştur"];
+    ViewBag.Title = @Localizer["CreateApplication"];
 }
 
-<h2>@Localizer["Uygulama Oluştur"]</h2>
+<h2>@Localizer["CreateApplication"]</h2>
 
 <form id="createApplicationForm" asp-action="Create">
     <div class="form-group">
-        <label for="Name">@Localizer["Ad"]</label>
+        <label for="Name">@Localizer["Name"]</label>
         <input type="text" class="form-control" id="Name" name="Name" required />
     </div>
-    <button type="submit" class="btn btn-primary">@Localizer["Oluştur"]</button>
-    <a asp-action="Index" class="btn btn-secondary">@Localizer["İptal"]</a>
+    <button type="submit" class="btn btn-primary">@Localizer["Create"]</button>
+    <a asp-action="Index" class="btn btn-secondary">@Localizer["Cancel"]</a>
 </form>
