--- a/UwingoIdentityMVC/Views/Application/Index.cshtml
+++ b/UwingoIdentityMVC/Views/Application/Index.cshtml
@@ -3,16 +3,16 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">@Localizer["Uygulamalar"]</h4>
+                <h4 class="card-title">@Localizer["Applications"]</h4>
                 <p class="text-muted mb-0">
-                    @Localizer["Bünyemizdeki Aktif Uygulamalar"]
+                    @Localizer["ActiveApplicationsInOurOrganization"]
                 </p>
             </div>
             @if (User.HasClaim(c => c.Type == "Application" && c.Value == "CreateApplication"))
             {
                 <div class="card-body">
                     <div class="button-items">
-                        <a asp-action="Create" class="btn btn-secondary buttons-collection dropdown-toggle buttons-colvis">@Localizer["Yeni Uygulama Ekle"]</a>
+                        <a asp-action="Create" class="btn btn-secondary buttons-collection dropdown-toggle buttons-colvis">@Localizer["AddNewApplication"]</a>
                     </div>
                 </div>
             }
@@ -76,11 +76,11 @@
                             <table id="datatable-buttons" class="table table-striped table-bordered dt-responsive nowrap" style="width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th>@Localizer["Ad"]</th>
+                                        <th>@Localizer["Name"]</th>
                                         @if (User.HasClaim(c => c.Type == "Application" && c.Value == "EditApplication") ||
                                         User.HasClaim(c => c.Type == "Application" && c.Value == "DeleteApplication"))
                                         {
-                                            <th>@Localizer["İşlemler"]</th>
+                                            <th>@Localizer["Transactions"]</th>
                                         }
                                     </tr>
                                 </thead>
@@ -141,12 +141,12 @@
     <script>
         function deleteApplication(id) {
             Swal.fire({
-                title: '@Localizer["Emin misiniz?"]',
-                text: "@Localizer["Bu kaydı silmek istediğinizden emin misiniz?"]",
+                title: 'Emin misiniz?',
+                text: "Bu kaydı silmek istediğinizden emin misiniz?",
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonText: '@Localizer["Evet, Sil!"]',
-                cancelButtonText: '@Localizer["Hayır, İptal Et"]',
+                confirmButtonText: 'Evet, Sil!',
+                cancelButtonText: 'Hayır, İptal Et',
                 reverseButtons: true
             }).then(function (result) {
                 if (result.isConfirmed) {
@@ -155,8 +155,8 @@
                         type: 'POST',
                         success: function (response) {
                             Swal.fire(
-                                '@Localizer["Silindi!"]',
-                                '@Localizer["Kayıt başarıyla silindi."]',
+                                'Silindi!',
+                                'Kayıt başarıyla silindi.',
                                 'success'
                             ).then(() => {
                                 window.location.reload();
@@ -164,8 +164,8 @@
                         },
                         error: function () {
                             Swal.fire(
-                                '@Localizer["Hata!"]',
-                                '@Localizer["Silme işlemi sırasında bir hata oluştu."]',
+                                'Hata!',
+                                'Silme işlemi sırasında bir hata oluştu.',
                                 'error'
                             );
                         }
