--- a/UwingoIdentityMVC/Views/Authentication/LockScreen.cshtml
+++ b/UwingoIdentityMVC/Views/Authentication/LockScreen.cshtml
@@ -43,7 +43,7 @@
                                 <form class="form-horizontal auth-form" action="index.html">
 
                                     <div class="form-group mb-2">
-                                        <label class="form-label" for="username">Password</label>
+                                        <label class="form-label" for="username">@Localizer["Password"]</label>
                                         <div class="input-group mb-3">
                                             <input type="password" class="form-control" id="password" placeholder="Enter password">
                                         </div>
@@ -55,7 +55,7 @@
                                         </div><!--end col-->
                                     </div> <!--end form-group-->
                                 </form><!--end form-->
-                                <p class="text-muted mb-0 mt-3">Not you ? return  <a href="auth-register.html" class="text-primary ms-2">Sign In</a></p>
+                                <p class="text-muted mb-0 mt-3">Not you ? return  <a href="auth-register.html" class="text-primary ms-2">@Localizer["SignIn"]</a></p>
                             </div>
                             <div class="card-body bg-light-alt text-center">
                                 <span class="text-muted d-none d-sm-inline-block">
