--- a/UwingoIdentityMVC/Views/Authentication/NotFound.cshtml
+++ b/UwingoIdentityMVC/Views/Authentication/NotFound.cshtml
@@ -37,17 +37,17 @@
                                         <a href="index.html" class="logo logo-admin">
                                         <img src="~/images/uwingoLogo.jpg" height="50" alt="logo" class="auth-logo">
                                         </a>
-                                        <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Oops! Sorry page does not found</h4>   
-                                        <p class="text-muted  mb-0">Back to dashboard of Uwingo.</p>  
+                                        <h4 class="mt-3 mb-1 fw-semibold text-white font-18">@Localizer["Oops!SorryPageDoesNotFound"]</h4>   
+                                        <p class="text-muted  mb-0">@Localizer["BackToDashboardOfUwingo."]</p>  
                                     </div>
                                 </div>
                                 <div class="card-body">
                                     <div class="ex-page-content text-center">
                                         <img src="~/images/error.svg" alt="0" class="" height="170">
                                         <h1 class="mt-5 mb-4">404!</h1>  
-                                        <h5 class="font-16 text-muted mb-5">Somthing went wrong</h5>                                    
+                                        <h5 class="font-16 text-muted mb-5">@Localizer["SomethingWentWrong"]</h5>                                    
                                     </div>          
-                                    <a class="btn btn-primary w-100 waves-effect waves-light" href="index.html">Back to Dashboard <i class="fas fa-redo ms-1"></i></a>                         
+                                    <a class="btn btn-primary w-100 waves-effect waves-light" href="index.html">@Localizer["BackToDashboard"] <i class="fas fa-redo ms-1"></i></a>                         
                                 </div>
                                 <div class="card-body bg-light-alt text-center">
                                     <span class="text-muted d-none d-sm-inline-block">Uwingo © <script>
