--- a/UwingoIdentityMVC/Views/Authentication/RecoverPassword.cshtml
+++ b/UwingoIdentityMVC/Views/Authentication/RecoverPassword.cshtml
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>@Localizer["Uwingo - Identity"]</title>
+    <title>@Localizer["Uwingo-Identity"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
     <meta content="" name="author" />
@@ -38,8 +38,8 @@
                                     <a href="index.html" class="logo logo-admin">
                                         <img src="~/images/uwingoLogo.jpg" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="mt-3 mb-1 fw-semibold text-white font-18">@Localizer["Reset Password For Uwingo"]</h4>
-                                    <p class="text-muted mb-0">@Localizer["Enter your Email and instructions will be sent to you!"]</p>
+                                    <h4 class="mt-3 mb-1 fw-semibold text-white font-18">@Localizer["ResetPasswordForUwingo"]</h4>
+                                    <p class="text-muted mb-0">@Localizer["EnterYourEmailAndInstructionsWillBeSentToYou!"]</p>
                                 </div>
                             </div>
                             <div class="card-body">
@@ -47,7 +47,7 @@
                                     <div class="form-group mb-2">
                                         <label class="form-label" for="username">@Localizer["Email"]</label>
                                         <div class="input-group">
-                                            <input type="email" class="form-control" id="email" placeholder="@Localizer["Enter Email"]">
+                                            <input type="email" class="form-control" id="email" placeholder="@Localizer["EnterEmail"]">
                                         </div>
                                     </div><!--end form-group-->
 
@@ -57,7 +57,7 @@
                                         </div><!--end col-->
                                     </div> <!--end form-group-->
                                 </form><!--end form-->
-                                <p class="text-muted mb-0 mt-3">@Localizer["Remember It ?"] <a href="auth-register.html" class="text-primary ms-2">@Localizer["Sign in here"]</a></p>
+                                <p class="text-muted mb-0 mt-3">@Localizer["RememberIt?"] <a href="auth-register.html" class="text-primary ms-2">@Localizer["SignInHere"]</a></p>
                             </div>
                             <div class="card-body bg-light-alt text-center">
                                 <span class="text-muted d-none d-sm-inline-block">
