--- a/UwingoIdentityMVC/Views/Authentication/ResetPassword.cshtml
+++ b/UwingoIdentityMVC/Views/Authentication/ResetPassword.cshtml
@@ -20,9 +20,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>@Localizer["Uwingo - Reset Password"]</title>
+    <title>@Localizer["Uwingo-Reset Password"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta content="@Localizer["Reset your password"]" name="description" />
+    <meta content="@Localizer["ResetYourPassword"]" name="description" />
     <meta content="" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
@@ -48,8 +48,8 @@
                                     <a href="/" class="logo logo-admin">
                                         <img src="~/images/uwingoLogo.jpg" height="50" alt="logo" class="auth-logo">
                                     </a>
-                                    <h4 class="mt-3 mb-1 fw-semibold text-white">@Localizer["Create New Password"]</h4>
-                                    <p class="text-muted">@Localizer["Create your new password."]</p>
+                                    <h4 class="mt-3 mb-1 fw-semibold text-white">@Localizer["CreateNewPassword"]</h4>
+                                    <p class="text-muted">@Localizer["CreateYourNewPassword."]</p>
                                 </div>
                             </div>
                             <div class="card-body">
@@ -57,14 +57,14 @@
                                     <input type="hidden" id="email" value="@Model.Email">
                                     <input type="hidden" id="token" value="@Model.Token">
                                     <div class="form-group mb-2">
-                                        <label class="form-label" for="newPassword">@Localizer["New Password"]</label>
+                                        <label class="form-label" for="newPassword">@Localizer["NewPassword"]</label>
                                         <div class="input-group">
-                                            <input type="password" class="form-control" id="newPassword" placeholder="@Localizer["Enter your new password"]" required>
+                                            <input type="password" class="form-control" id="newPassword" placeholder="@Localizer["EnterYourNewPassword"]" required>
                                         </div>
                                     </div>
                                     <div class="form-group mb-0 row">
                                         <div class="col-12 mt-2">
-                                            <button class="btn btn-primary w-100 waves-effect waves-light" type="button" id="confirmResetButton">@Localizer["Reset Password"]</button>
+                                            <button class="btn btn-primary w-100 waves-effect waves-light" type="button" id="confirmResetButton">@Localizer["ResetPassword"]</button>
                                         </div>
                                     </div>
                                 </form>
@@ -92,12 +92,12 @@
                 var token = $('#token').val();
 
                 if (!newPassword) {
-                    alert("@Localizer["Please enter a new password."]");
+                    alert("Please enter a new password.");
                     return;
                 }
 
                 if (!email || !token) {
-                    alert("@Localizer["Email or token is missing."]");
+                    alert("Email or token is missing.");
                     return;
                 }
 
@@ -111,7 +111,7 @@
                         window.location.href = "/Authentication/Login"; // Şifre sıfırlandıktan sonra login sayfasına yönlendirme
                     },
                     error: function (xhr) {
-                        alert("@Localizer["Error: "]" + xhr.responseText);
+                        alert("Error: " + xhr.responseText);
                     }
                 });
             });
