--- a/UwingoIdentityMVC/Views/Company/Create.cshtml
+++ b/UwingoIdentityMVC/Views/Company/Create.cshtml
@@ -1,23 +1,23 @@
 ﻿@model List<TenantDto>
 
 @{
-    ViewBag.Title = Localizer["Şirket Oluştur"];
+    ViewBag.Title = Localizer["CreateCompany"];
 }
 
-<h2>@Localizer["Şirket Oluştur"]</h2>
+<h2>@Localizer["CreateCompany"]</h2>
 
 <form id="createCompanyForm" asp-action="Create">
     <div class="form-group">
-        <label for="Name">@Localizer["Ad"]</label>
+        <label for="Name">@Localizer["Name"]</label>
         <input type="text" class="form-control" id="Name" name="Name" required />
     </div>
     <div class="form-group">
-        <label for="Address">@Localizer["Adres"]</label>
+        <label for="Address">@Localizer["Address"]</label>
         <input type="text" class="form-control" id="Address" name="Address" required />
     </div>
     <div class="form-group">
         <label for="TenantId">@Localizer["Tenant"]</label>
-        <select id="TenantId" name="TenantId" class="form-select select2" required data-placeholder="@Localizer["-- Lütfen Tenant Seçiniz --"]">
+        <select id="TenantId" name="TenantId" class="form-select select2" required data-placeholder="@Localizer["--PleaseSelectTenant--"]">
             <option value=""></option>
             @foreach (var tenant in Model)
             {
@@ -25,6 +25,6 @@
             }
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">@Localizer["Oluştur"]</button>
-    <a asp-action="Index" class="btn btn-secondary">@Localizer["İptal"]</a>
+    <button type="submit" class="btn btn-primary">@Localizer["Create"]</button>
+    <a asp-action="Index" class="btn btn-secondary">@Localizer["Cancel"]</a>
 </form>
