--- a/UwingoIdentityMVC/Views/Company/Edit.cshtml
+++ b/UwingoIdentityMVC/Views/Company/Edit.cshtml
@@ -1,24 +1,24 @@
 ﻿@model CompanyDto
 
 @{
-    ViewBag.Title = Localizer["Şirket Düzenle"];
+    ViewBag.Title = Localizer["UpdateCompany"];
 }
 
-<h2>@Localizer["Şirket Düzenle"]</h2>
+<h2>@Localizer["UpdateCompany"]</h2>
 
     <div class="form-group">
-        <label for="Name">@Localizer["Ad"]</label>
+        <label for="Name">@Localizer["Name"]</label>
         <input type="text" class="form-control" id="Name" name="Name" value="@Model.Name" required />
     </div>
     <div class="form-group">
-        <label for="Address">@Localizer["Adres"]</label>
+        <label for="Address">@Localizer["Address"]</label>
         <input type="text" class="form-control" id="Address" name="Address" value="@Model.Address" required />
     </div>
     <div>
     <input type="text" class="form-control" id="TenantId" name="TenantId" value="@Model.TenantId" style="display:none" />
     </div>
-    <button type="button" id="button" name="button" onclick="myFunc()" class="btn btn-primary">@Localizer["Güncelle"]</button>
-    <a asp-action="Index" class="btn btn-secondary">@Localizer["İptal"]</a>
+    <button type="button" id="button" name="button" onclick="myFunc()" class="btn btn-primary">@Localizer["Update"]</button>
+    <a asp-action="Index" class="btn btn-secondary">@Localizer["Cancel"]</a>
 
 
 @section Scripts {
@@ -26,12 +26,12 @@
         function myFunc() {
             console.log("girdim");
             Swal.fire({
-                title: '@Localizer["Emin misiniz?"]',
-                text: "@Localizer["Güncelleme işlemi yapmak üzeresiniz!"]",
+                title: 'Emin misiniz?',
+                text: "Güncelleme işlemi yapmak üzeresiniz!",
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonText: '@Localizer["Evet, Güncelle!"]',
-                cancelButtonText: '@Localizer["Hayır, Güncellemeyi İptal Et"]',
+                confirmButtonText: 'Evet, Güncelle!',
+                cancelButtonText: 'Hayır, Güncellemeyi İptal Et',
                 reverseButtons: true
             }).then(function (result) {
                 if (result.isConfirmed) {
@@ -51,8 +51,8 @@
                         contentType: 'application/json',
                         success: function (response) {
                             Swal.fire(
-                                '@Localizer["Güncellendi!"]',
-                                '@Localizer["Güncelleme başarıyla tamamlandı."]',
+                                'Güncellendi!',
+                                'Güncelleme başarıyla tamamlandı.',
                                 'success'
                             ).then(() => {
                                 window.location.href = '@Url.Action("Index", "Company")';
@@ -60,8 +60,8 @@
                         },
                         error: function () {
                             Swal.fire(
-                                '@Localizer["Hata!"]',
-                                '@Localizer["Güncelleme sırasında bir hata oluştu."]',
+                                'Hata!',
+                                'Güncelleme sırasında bir hata oluştu.',
                                 'error'
                             );
                         }
