--- a/UwingoIdentityMVC/Views/CompanyApplication/Create.cshtml
+++ b/UwingoIdentityMVC/Views/CompanyApplication/Create.cshtml
@@ -1,15 +1,15 @@
 ﻿@model Tuple<CompanyApplicationDto, List<CompanyDto>, List<ApplicationDto>>
 
 @{
-    ViewBag.Title = Localizer["Assign Application to Company"];
+    ViewBag.Title = Localizer["AssignApplicationToCompany"];
 }
 
-<h2>@Localizer["Assign Application to Company"]</h2>
+<h2>@Localizer["AssignApplicationToCompany"]</h2>
 
 <div class="form-group">
-    <label for="CompanyId">@Localizer["Select Company"]</label>
+    <label for="CompanyId">@Localizer["SelectCompany"]</label>
 
-    <select class="form-control select2" name="CompanyId" id="CompanyId" data-placeholder="-- @Localizer["Select Company"] --">
+    <select class="form-control select2" name="CompanyId" id="CompanyId" data-placeholder="-- @Localizer["SelectCompany"] --">
         <option value=""></option>
         @foreach (var item in Model.Item2)
         {
@@ -18,8 +18,8 @@
     </select>
 </div>
 <div class="form-group">
-    <label for="ApplicationId">@Localizer["Select Application"]</label>
-    <select class="form-control select2" name="ApplicationId" id="ApplicationId" data-placeholder="-- @Localizer["Select Application"] --">
+    <label for="ApplicationId">@Localizer["SelectApplication"]</label>
+    <select class="form-control select2" name="ApplicationId" id="ApplicationId" data-placeholder="-- @Localizer["SelectApplication"] --">
         <option value=""></option>
         @foreach (var item in Model.Item3)
         {
@@ -28,7 +28,7 @@
     </select>
 </div>
 <div class="form-group">
-    <label for="DbConnection">@Localizer["Database Connection"]</label>
+    <label for="DbConnection">@Localizer["DatabaseConnection"]</label>
     <input type="text" class="form-control" id="DbConnection" name="DbConnection" required />
 </div>
 <button type="button" name="button" id="button" class="btn btn-primary" onclick="submitCreateForm()">@Localizer["Assign"]</button>
@@ -38,12 +38,12 @@
     <script>
         function submitCreateForm() {
             Swal.fire({
-                title: '@Localizer["Are you sure?"]',
-                text: '@Localizer["You are about to assign this application to the company!"]',
+                title: 'Are you sure?',
+                text: 'You are about to assign this application to the company!',
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonText: '@Localizer["Yes, Assign it!"]',
-                cancelButtonText: '@Localizer["No, Cancel!"]',
+                confirmButtonText: 'Yes, Assign it!',
+                cancelButtonText: 'No, Cancel!',
                 reverseButtons: true
             }).then(function (result) {
                 if (result.isConfirmed) {
@@ -64,8 +64,8 @@
                         contentType: 'application/json',
                         success: function (response) {
                             Swal.fire(
-                                '@Localizer["Assigned!"]',
-                                '@Localizer["The application has been assigned successfully."]',
+                                'Assigned!',
+                                'The application has been assigned successfully.',
                                 'success'
                             ).then(() => {
                                 window.location.href = '@Url.Action("Index", "CompanyApplication")';
@@ -73,8 +73,8 @@
                         },
                         error: function () {
                             Swal.fire(
-                                '@Localizer["Error!"]',
-                                '@Localizer["There was an error assigning the application."]',
+                                'Error!',
+                                'There was an error assigning the application.',
                                 'error'
                             );
                         }
