--- a/UwingoIdentityMVC/Views/Role/Create.cshtml
+++ b/UwingoIdentityMVC/Views/Role/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Tuple<List<CompanyDto>, List<ApplicationDto>>
 
 @{
-    ViewBag.Title = Localizer["Create Role"];
+    ViewBag.Title = Localizer["CreateRole"];
 }
 
-<h2>@Localizer["Create Role"]</h2>
+<h2>@Localizer["CreateRole"]</h2>
 
 <form id="createRoleForm" asp-action="Create">
     <div class="form-group">
@@ -20,7 +20,7 @@
     {
         <div class="form-group mb-2">
             <label class="form-label" for="companySelect">@Localizer["Company"]</label>
-            <select class="form-select select2" name="CompanyId" id="companySelect" required data-placeholder="@Localizer["-- Please Select a Company --"]">
+            <select class="form-select select2" name="CompanyId" id="companySelect" required data-placeholder="@Localizer["--PleaseSelectACompany--"]">
                 <option value=""></option>
                 @foreach (var company in Model.Item1)
                 {
@@ -30,9 +30,9 @@
         </div>
 
         <div class="form-group mb-2">
-            <label class="form-label" for="applicationSelect">@Localizer["User's Application"]</label>
+            <label class="form-label" for="applicationSelect">@Localizer["User'sApplication"]</label>
             <select class="form-select" name="ApplicationId" id="applicationSelect" required>
-                <option value="">@Localizer["-- Please Select an Application --"]</option>
+                <option value="">@Localizer["--PleaseSelectAnApplication--"]</option>
             </select>
         </div>
     }
@@ -40,8 +40,8 @@
     @if (User.IsInRole("TenantAdmin") || User.IsInRole("User"))
     {
         <div class="form-group mb-2">
-            <label class="form-label" for="applicationSelect">@Localizer["User's Application"]</label>
-            <select class="form-select select2" name="ApplicationId" id="applicationSelect" required data-placeholder="@Localizer["-- Please Select an Application --"]">
+            <label class="form-label" for="applicationSelect">@Localizer["User'sApplication"]</label>
+            <select class="form-select select2" name="ApplicationId" id="applicationSelect" required data-placeholder="@Localizer["--PleaseSelectAnApplication--"]">
                 <option value=""></option>
                 @foreach (var application in Model.Item2)
                 {
@@ -69,18 +69,18 @@
                         success: function (data) {
                             console.log(data); // Log the response data
                             $('#applicationSelect').empty();
-                            $('#applicationSelect').append('<option value="">@Localizer["-- Please Select an Application --"]</option>'); // Add empty option
+                            $('#applicationSelect').append('<option value="">-- Please Select an Application --</option>'); // Add empty option
                             $.each(data, function (index, application) {
                                 $('#applicationSelect').append(new Option(application.name, application.id));
                             });
                         },
                         error: function () {
-                            alert('@Localizer["An error occurred while fetching applications."]');
+                            alert('An error occurred while fetching applications.');
                         }
                     });
                 } else {
                     $('#applicationSelect').empty(); // Clear dropdown if no company selected
-                    $('#applicationSelect').append('<option value="">@Localizer["-- Please Select an Application --"]</option>'); // Add empty option
+                    $('#applicationSelect').append('<option value="">-- Please Select an Application --</option>'); // Add empty option
                 }
             });
         });
