--- a/UwingoIdentityMVC/Views/User/Edit.cshtml
+++ b/UwingoIdentityMVC/Views/User/Edit.cshtml
@@ -1,28 +1,28 @@
 ﻿@model UserDto
 @{
-    ViewBag.Title = Localizer["Kullanıcı Düzenle"];
+    ViewBag.Title = Localizer["EditUser"];
 }
 
-<h2>@Localizer["Kullanıcı Düzenle"]</h2>
+<h2>@Localizer["EditUser"]</h2>
 
 <div class="form-group">
-    <label for="UserName">@Localizer["Kullanıcı Adı"]</label>
+    <label for="UserName">@Localizer["Username"]</label>
     <input type="text" class="form-control" id="UserName" name="UserName" value="@Model.UserName" required />
 </div>
 <div class="form-group">
-    <label for="FirstName">@Localizer["Ad"]</label>
+    <label for="FirstName">@Localizer["Name"]</label>
     <input type="text" class="form-control" id="FirstName" name="FirstName" value="@Model.FirstName" required />
 </div>
 <div class="form-group">
-    <label for="LastName">@Localizer["Soyadı"]</label>
+    <label for="LastName">@Localizer["Surname"]</label>
     <input type="text" class="form-control" id="LastName" name="LastName" value="@Model.LastName" required />
 </div>
 <div class="form-group">
-    <label for="PhoneNumber">@Localizer["Telefon Numarası"]</label>
+    <label for="PhoneNumber">@Localizer["PhoneNumber"]</label>
     <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required />
 </div>
 <div class="form-group">
-    <label for="Email">@Localizer["E-posta"]</label>
+    <label for="Email">@Localizer["E-Mail"]</label>
     <input type="email" class="form-control" id="Email" name="Email" value="@Model.Email" required />
 </div>
 <div>
@@ -33,30 +33,30 @@
 <input type="hidden" id="CompanyId" value="@ViewBag.CompanyId" />
 <input type="hidden" id="ApplicationId" value="@ViewBag.ApplicationId" />
 
-<button type="button" name="button" onclick="myFunc()" id="update" class="btn btn-primary">@Localizer["Güncelle"]</button>
-<a asp-action="Index" class="btn btn-secondary">@Localizer["İptal"]</a>
-<button type="button" class="btn btn-info" onclick="openClaimsModal()">@Localizer["Yetkileri Düzenle"]</button>
+<button type="button" name="button" onclick="myFunc()" id="update" class="btn btn-primary">@Localizer["Update"]</button>
+<a asp-action="Index" class="btn btn-secondary">@Localizer["Cancel"]</a>
+<button type="button" class="btn btn-info" onclick="openClaimsModal()">@Localizer["EditAuthorizations"]</button>
 
 <!-- Yetkileri Düzenle Modalı -->
 <div id="claimsModal" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">@Localizer["Yetkileri Düzenle"]</h5>
+                <h5 class="modal-title">@Localizer["EditAuthorizations"]</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label for="ClaimType">@Localizer["Yetki Tipi"]</label>
+                    <label for="ClaimType">@Localizer["AuthorizationType"]</label>
                     <input type="text" class="form-control" id="ClaimType" name="ClaimType" required />
                 </div>
                 <div class="form-group">
-                    <label for="ClaimValue">@Localizer["Yetki Değeri"]</label>
+                    <label for="ClaimValue">@Localizer["AuthorityValue"]</label>
                     <input type="text" class="form-control" id="ClaimValue" name="ClaimValue" required />
                 </div>
-                <button type="button" class="btn btn-primary" onclick="saveClaims()">@Localizer["Kaydet"]</button>
+                <button type="button" class="btn btn-primary" onclick="saveClaims()">@Localizer["Save"]</button>
             </div>
         </div>
     </div>
@@ -75,12 +75,12 @@
 
         function myFunc() {
             Swal.fire({
-                title: '@Localizer["Emin misiniz?"]',
-                text: "@Localizer["Güncelleme işlemi yapmak üzeresiniz!"]",
+                title: 'Emin misiniz?',
+                text: "Güncelleme işlemi yapmak üzeresiniz!",
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonText: '@Localizer["Evet, Güncelle!"]',
-                cancelButtonText: '@Localizer["Hayır, Güncellemeyi İptal Et"]',
+                confirmButtonText: 'Evet, Güncelle!',
+                cancelButtonText: 'Hayır, Güncellemeyi İptal Et',
                 reverseButtons: true
             }).then(function (result) {
                 if (result.isConfirmed) {
@@ -105,8 +105,8 @@
                         contentType: 'application/json',
                         success: function (response) {
                             Swal.fire(
-                                '@Localizer["Güncellendi!"]',
-                                '@Localizer["Güncelleme başarıyla tamamlandı."]',
+                                'Güncellendi!',
+                                'Güncelleme başarıyla tamamlandı.',
                                 'success'
                             ).then(() => {
                                 window.location.href = '@Url.Action("Index", "User")';
@@ -114,8 +114,8 @@
                         },
                         error: function () {
                             Swal.fire(
-                                '@Localizer["Hata!"]',
-                                '@Localizer["Güncelleme sırasında bir hata oluştu."]',
+                                'Hata!',
+                                'Güncelleme sırasında bir hata oluştu.',
                                 'error'
                             );
                         }
@@ -142,8 +142,8 @@
                 contentType: 'application/json',
                 success: function (response) {
                     Swal.fire(
-                        '@Localizer["Kaydedildi!"]',
-                        '@Localizer["Yetkiler başarıyla güncellendi."]',
+                        'Kaydedildi!',
+                        'Yetkiler başarıyla güncellendi.',
                         'success'
                     ).then(() => {
                         $('#claimsModal').modal('hide');
@@ -151,8 +151,8 @@
                 },
                 error: function () {
                     Swal.fire(
-                        '@Localizer["Hata!"]',
-                        '@Localizer["Yetkileri güncellerken bir hata oluştu."]',
+                        'Hata!',
+                        'Yetkileri güncellerken bir hata oluştu.',
                         'error'
                     );
                 }
